--- a/src/_theme-style.scss
+++ b/src/_theme-style.scss
@@ -1,3 +1,6 @@
-.irgendwas {
-    color: aqua;
+.App-receipe-search {
+    background: url('./static/images/Background-Receipe-Search.jpg') top center;
+    background-size: cover;
+    height: 280px;
+    padding-top: 30%;
 }
