--- a/src/_theme-style.scss
+++ b/src/_theme-style.scss
@@ -1,6 +1,19 @@
 .App-receipe-search {
     background: url('./static/images/Background-Receipe-Search.jpg') top center;
     background-size: cover;
-    height: 280px;
-    padding-top: 30%;
+    height: 300px;
+}
+
+.wrap-receipe-search {
+    margin-top: 120px;
+}
+
+.frontpage-receipe-category {
+    margin-top: 1rem;
+    img {
+        width: 100%;
+        height: auto;
+        border-radius: 4px;
+        margin-bottom: 1rem;
+    }
 }
