--- a/src/App.css
+++ b/src/App.css
@@ -239,7 +239,7 @@ sup {
 
 a {
   color: var(--bs-link-color);
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:hover {
   color: var(--bs-link-hover-color);
@@ -2761,7 +2761,6 @@ textarea.form-control-lg {
   line-height: var(--bs-btn-line-height);
   color: var(--bs-btn-color);
   text-align: center;
-  text-decoration: none;
   vertical-align: middle;
   cursor: pointer;
   user-select: none;
@@ -3105,7 +3104,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
   --bs-btn-focus-shadow-rgb: 31, 133, 51;
-  text-decoration: underline;
+  text-decoration: none;
   background-image: none;
 }
 .btn-link:focus-visible {
@@ -3429,7 +3428,6 @@ textarea.form-control-lg {
   font-weight: 400;
   color: var(--bs-dropdown-link-color);
   text-align: inherit;
-  text-decoration: none;
   white-space: nowrap;
   background-color: transparent;
   border: 0;
@@ -3613,7 +3611,6 @@ textarea.form-control-lg {
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
   color: var(--bs-nav-link-color);
-  text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -3762,7 +3759,6 @@ textarea.form-control-lg {
   margin-right: var(--bs-navbar-brand-margin-end);
   font-size: var(--bs-navbar-brand-font-size);
   color: var(--bs-navbar-brand-color);
-  text-decoration: none;
   white-space: nowrap;
 }
 .navbar-brand:hover, .navbar-brand:focus {
@@ -4527,7 +4523,6 @@ textarea.form-control-lg {
   padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
   font-size: var(--bs-pagination-font-size);
   color: var(--bs-pagination-color);
-  text-decoration: none;
   background-color: var(--bs-pagination-bg);
   border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4844,7 +4839,6 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-list-group-item-padding-y) var(--bs-list-group-item-padding-x);
   color: var(--bs-list-group-color);
-  text-decoration: none;
   background-color: var(--bs-list-group-bg);
   border: var(--bs-list-group-border-width) solid var(--bs-list-group-border-color);
 }
@@ -10850,4 +10844,75 @@ textarea.form-control-lg {
   height: auto;
   border-radius: 4px;
   margin-bottom: 1rem;
+}
+
+.receipe-card h3, .receipe-card .h3 {
+  font-size: 1.125rem;
+  margin-top: 20px;
+  color: #adb5bd;
+}
+.receipe-card h2, .receipe-card .h2 {
+  font-size: 1.25rem;
+  min-height: 48px;
+}
+.receipe-card .receipe-description {
+  min-height: 30px;
+}
+
+#shuffle-receipe {
+  position: absolute;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+#shuffle-receipe svg {
+  margin-top: -3px;
+}
+
+body:after {
+  content: "";
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  border-radius: 10px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 1.125rem;
+  font-size: 2rem;
+  color: #343a40;
+  font-weight: bold;
+}
+
+@media (min-width: 576px) {
+  body:after {
+    background: red;
+    content: "SM";
+  }
+}
+@media (min-width: 768px) {
+  body:after {
+    background: green;
+    content: "MD";
+  }
+}
+@media (min-width: 992px) {
+  body:after {
+    background: yellow;
+    content: "LG";
+  }
+}
+@media (min-width: 1200px) {
+  body:after {
+    background: blueviolet;
+    content: "XL";
+  }
+}
+@media (min-width: 1400px) {
+  body:after {
+    background: aqua;
+    content: "XXL";
+  }
 }
