--- a/src/App.scss
+++ b/src/App.scss
@@ -51,3 +51,4 @@
 @import "../node_modules/bootstrap/scss/utilities/api";
 // scss-docs-end import-stack
 @import "theme-style";
+@import "viewport-debug";
