--- a/src/_theme-style.scss
+++ b/src/_theme-style.scss
@@ -17,3 +17,32 @@
         margin-bottom: 1rem;
     }
 }
+
+.receipe-card{
+    h3 {
+        font-size: 1.125rem;
+        margin-top: 20px;
+        color: $gray-500;
+    }
+
+    h2{
+        font-size: 1.25rem;
+        min-height: 48px;
+    }
+    .receipe-description {
+        min-height: 55px;
+    }
+
+}
+
+#shuffle-receipe {
+    position: absolute;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    svg {
+        margin-top: -3px;
+    }
+}
+
