--- a/src/_viewport-debug.scss
+++ b/src/_viewport-debug.scss
@@ -1,4 +1,4 @@
-body:after {
+/* body:after {
     content: "";
     width: 90px;
     height: 90px;
@@ -47,4 +47,4 @@ body:after {
         background: aqua;
         content: "XXL"
     }
-}
+} */
